backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: devops-tour-api.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: api
              port:
                number: 8081
